--- a/src/ui-kit/Modal/ConfirmModal/ConfirmModal.module.css
+++ b/src/ui-kit/Modal/ConfirmModal/ConfirmModal.module.css
@@ -1,35 +1,22 @@
-
 .container {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: auto 120px;
-    grid-template-rows: auto auto auto;
-    row-gap: 20px;
-    column-gap: 20px;
-    color: #3F72AF;
-    background-color: #DBE2EF;
-    border-radius: 3px;
-    box-shadow: 0 0 15px -2px black;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: auto 120px;
+  grid-template-rows: auto auto auto;
+  row-gap: 20px;
+  column-gap: 20px;
+  color: #3F72AF;
+  background-color: #DBE2EF;
+  border-radius: 3px;
+  box-shadow: 0 0 15px -2px black;
+  z-index:100;
 }
 
-h1{
-  white-space: nowrap; 
+h1 {
+  white-space: nowrap;
 }
 
-.primary-btn{
-  justify-self: right;
-}
-
-.close-btn{
-  align-self: start;
-  justify-self: right;
-  border: inherit;
-  background: inherit;
-  color: inherit;
-  font-size: 36px;
-}
-
-.content{
+.content {
   grid-column: 1 / span 2;
   grid-row: 2 / span 1;
   color: black;
