--- a/src/ui-kit/Textarea/Textarea.module.css
+++ b/src/ui-kit/Textarea/Textarea.module.css
@@ -1,7 +1,8 @@
 .textarea {
     padding: 5px 5px;
-    width: calc(100% - 13px);
-    min-height: 26px;
+    width: 100%;
+    box-sizing: border-box;
+    min-height: 40px;
     background-color: inherit;
     border: 2px solid #3F72AF;
     border-radius: 3px;
